--- a/css/style.css
+++ b/css/style.css
@@ -343,27 +343,28 @@ body section .text-white {
   padding: 10px 20px;
 }
 
+/*desactiva el hoover cuando el modal está abierto*/
 main section {
   margin-bottom: 1rem;
+  margin-top: 10rem;
 }
-main section .fs-2 {
-  font-weight: 600;
+main section h1 {
+  font-size: 3rem;
+  font-weight: 400;
   color: #ff4400;
   font-family: "Seymour One", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
-  font-size: 3rem;
-}
-main section .form-contacto {
-  width: 70%;
-}
-main section .mapa {
-  width: 70%;
 }
 main .contactanos {
   justify-content: center;
 }
+main .contactanos p {
+  text-align: center;
+  font-size: 2.5em;
+}
 
+/*desactiva el hoover cuando el modal está abierto*/
 .principal {
   margin-top: 10rem;
   text-align: center;
@@ -423,6 +424,7 @@ aside h3 {
   font-family: "Seymour One", sans-serif;
 }
 
+/*desactiva el hoover cuando el modal está abierto*/
 body .border {
   width: 160px;
   height: 5px;
@@ -548,6 +550,7 @@ body .clientes .stars {
   }
 }
 
+/*desactiva el hoover cuando el modal está abierto*/
 body {
   background-color: #e7e7e7;
 }
@@ -589,6 +592,21 @@ body .seccion_principal .descripcion {
 body .seccion_principal .card {
   border-radius: 1rem;
 }
+body .seccion_principal .card .modal.show:hover {
+  background-color: transparent;
+  border-color: transparent;
+  box-shadow: none;
+  cursor: default;
+  pointer-events: none;
+  transform: none;
+}
+body .seccion_principal .card .card {
+  pointer-events: none !important;
+  z-index: index 100;
+}
+body .seccion_principal .card hover {
+  background-color: transparent;
+}
 body .seccion_principal .card .card-body .fs-5 {
   text-align: center;
 }
@@ -600,6 +618,16 @@ body .seccion_principal .card .btn-primary {
   background-color: #198754;
   border: #198754;
   margin-bottom: 2rem !important;
+}
+body .seccion_principal .modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+body .seccion_principal .modal.show {
+  pointer-events: none;
 }
 body article {
   background-color: #198754;
@@ -726,7 +754,7 @@ body article {
     width: 5.5rem;
   }
   body .principal .explora p {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   body .principal .explora ul {
     list-style-type: none !important;
@@ -800,22 +828,24 @@ body article {
   }
   /********************************contacto******************************/
   main section {
-    text-align: center;
+    margin-bottom: 1rem;
   }
-  main section p .fs-2 {
-    font-weight: 600;
+  main section h1 {
+    font-size: 1.5rem;
+    font-weight: 400;
     color: #ff4400;
     font-family: "Seymour One", sans-serif;
     font-weight: 900;
     font-size: 2.5rem;
-    font-weight: 900;
-    font-size: 2.5rem;
+  }
+  main section .card p {
+    font-size: 80% !important;
   }
   main section .form-contacto {
-    width: 100%;
+    width: 80%;
   }
   main section .mapa {
-    width: 100%;
+    width: 70%;
   }
   main .contactanos {
     justify-content: center;
@@ -887,12 +917,15 @@ body article {
     width: 5.5rem;
   }
   .principal .explora p {
-    font-size: 1rem !important;
+    font-size: 1.5rem !important;
   }
   .principal aside h3 {
     font-size: 0.6rem;
   }
   /**************************actividades******************************/
+  .card p {
+    font-size: 40% !important;
+  }
   /*******************************actividades****************/
   body {
     margin-top: 10rem !important;
@@ -924,6 +957,10 @@ body article {
     text-align: center;
   }
   /*contacto*/
+  main section h1 {
+    font-size: 1.5rem;
+    padding-top: 0rem !important;
+  }
   main section .form-contacto {
     width: 100%;
   }
@@ -1017,5 +1054,6 @@ body article {
     justify-content: space-around;
   }
 }
+/*desactiva el hoover cuando el modal está abierto*/
 
 /*# sourceMappingURL=style.css.map */
