--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -27,3 +27,20 @@
     font-size: 2.5rem;
 }
 
+/*desactiva el hoover cuando el modal está abierto*/
+
+//* Definición del mixin
+
+@mixin disable-hover-on-modal-open {
+    &:hover {
+      background-color: transparent;
+      border-color: transparent;
+      box-shadow: none;
+      cursor: default;
+      pointer-events: none;
+      transform: none;
+    }
+  }//*/
+  
+ 
+
