--- a/css/style.css
+++ b/css/style.css
@@ -871,7 +871,7 @@ body article {
   }
   /****************************este es el final de la mrdiquerie de 768 no borrar!!!!*******************/
 }
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
   /***************************información**********************************/
   .info {
     margin-top: 8rem !important;
@@ -923,15 +923,12 @@ body article {
     font-size: 0.6rem;
   }
   /**************************actividades******************************/
-  .card p {
-    font-size: 40% !important;
-  }
-  /*******************************actividades****************/
   body {
     margin-top: 10rem !important;
   }
   body .seccion_principal {
     margin-top: 2rem !important;
+    text-align: center;
   }
   body .seccion_principal h1 {
     font-size: 1.3rem !important;
@@ -952,14 +949,17 @@ body article {
   }
   body .seccion_principal .py-5 .card {
     margin-bottom: 10px !important;
-  }
-  body .seccion_principal .py-5 .card .card-body .fs-5 {
     text-align: center;
   }
-  /*contacto*/
+  body .seccion_principal .py-5 .card .card-body .fs-5 {
+    font-weight: 400;
+  }
+  /***************contacto***********/
+  main section {
+    margin-top: 0rem !important;
+  }
   main section h1 {
     font-size: 1.5rem;
-    padding-top: 0rem !important;
   }
   main section .form-contacto {
     width: 100%;
@@ -968,34 +968,36 @@ body article {
     /* ... other styles ... */
   }
 }
-@media (min-width: 320px) and (max-width: 767px) and (max-width: 768px) {
+@media (max-width: 767px) and (max-width: 768px) {
   main section .contact-form-area {
     padding: 50px;
     margin-top: 50px;
   }
 }
-@media (min-width: 320px) and (max-width: 767px) and (max-width: 320px) {
+@media (max-width: 767px) and (max-width: 320px) {
   main section .contact-form-area {
     padding: 20px;
     margin-top: 30px;
   }
 }
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
   main section .contact-form-area input[type=text],
   main section .contact-form-area input[type=email],
   main section .contact-form-area textarea {
-    width: 100%; /* Make all inputs full-width on smaller screens */
+    width: 100%;
+    /* Make all inputs full-width on smaller screens */
     height: auto;
   }
 }
-@media (min-width: 320px) and (max-width: 767px) and (min-width: 768px) {
+@media (max-width: 767px) and (min-width: 768px) {
   main section .contact-form-area input[type=text],
   main section .contact-form-area input[type=email],
   main section .contact-form-area textarea {
-    width: 49.6%; /* Restore original width for larger screens */
+    width: 49.6%;
+    /* Restore original width for larger screens */
   }
 }
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
   main section .mapa {
     width: 100%;
   }
