--- a/scss/pages/_informacion.scss
+++ b/scss/pages/_informacion.scss
@@ -11,12 +11,11 @@
         }
 
         .info{
-
             margin-top: 8rem;
        
                 h1{
                     justify-content: center;
-                   font-size: 3rem !important;
+                   font-size: 3rem;
                 }
 
                 .container{              
