--- a/scss/pages/_destinos.scss
+++ b/scss/pages/_destinos.scss
@@ -1,26 +1,34 @@
 @import "../utilities/mixins";
 @import"../utilities/variables";
 
-.seccion_principal {
+.principal {
     text-align: center;
-    font-weight: 800;
+    font-weight: 800;      
     color: #ffffff;
     padding: 0;
-    
+    margin-top: 1rem;
+   
     h1 {    
-       
+  
         font-weight: 600;
-        @include texto
+        @include texto;
+        margin-bottom:0;
     }
 
 
     .fs-5 {
+        margin-top: auto;
         color:black;
-        font-size: 1.2rem;
-        font-weight: 300;
+        font-size: 1.8rem;
+        font-weight: 200;
     }
 
-    .explora {
+    .container-fluid{
+      
+        margin-top: 0;
+    }
+
+    .explora {      
         flex-direction: column;
         display: flex;
         @include estilo-footer;
@@ -37,4 +45,9 @@
 
 aside {
     text-align: center;
-}
+    margin-top: 4rem;
+   h3{
+    background-color: aquamarine;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2rem;
+}}
