--- a/scss/pages/_informacion.scss
+++ b/scss/pages/_informacion.scss
@@ -6,17 +6,20 @@
         {
           width: 160px;
           height: 5px;
-          background: #6ab04c;
+          background: #4cb06c;
           margin: 26px auto;
         }
 
         .info{
-
-            margin-top: 8rem;
+       
+       
+         
+         
        
                 h1{
+                  margin-top: 1rem;
                     justify-content: center;
-                   font-size: 3rem !important;
+                   font-size: 2.5rem !important;
                 }
 
                 .container{              
